# K3lso-CAN-communication

./: .gitignore  README.md
Ardunio can/CAN_test/: CAN_test.ino  CAN_test_mine.ino  CAN_test_sky.ino
PCAN-Basic API (Linux)/: PCAN-Basic_Linux-4.3.4.tar
can_FDCANUsb/: commandos  moteus_motor.py
can_nomad/: CMakeLists.txt
can_nomad/src/: PCANDevice.cpp
can_nomad/test/: CMakeLists.txt  k3lso_freq.cpp  k3lso_test_rx.cpp  k3lso_test_tx.cpp  k3lso_torque.cpp  pcan_test.cpp
can_tmotor/: PCANBasic.py  todo.txt
pcan_api/: changelog.md  license.txt  readme.txt
pcan_api/libpcanbasic/: Makefile  changelog.md
pcan_api/libpcanbasic/docs/: PCANBasic_deu.chm  PCANBasic_enu.chm  PCANBasic_enu_linux_addenda.txt
pcan_api/libpcanbasic/examples/: Makefile
pcan_api/libpcanbasic/examples/c++/: Makefile  pcaneventread  pcaneventwrite  pcanread  pcanwrite
pcan_api/libpcanbasic/examples/python/: PCANBasicExample.py  PCANBasicExample_py3.py  tMotorTestConnection.py  tMotorTrajectoryTwoPos.py  test_plot.py
pcan_api/libpcanbasic/pcanbasic/: Makefile  Makefile_latest.mk  Makefile_legacy.mk  PCANBasic.h  changelog.md  libpcanbasic.so.4.3.4
pcan_api/libpcanbasic/pcanbasic/src/: libpcanbasic.c  libpcanbasic_legacy.cpp  pcaninfo.c  pcaninfo.h  pcanlog.c  pcanlog.h  pcbcore.c  pcbcore.h  pcblog.c  pcblog.h  pcbtrace.c  pcbtrace.h  resource.h  version.h
pcan_api/libpcanbasic/pcaninfo/: Makefile  changelog.md  pcaninfo  pcaninfo.1.0.3
pcan_api/libpcanbasic/pcaninfo/src/: main.c  version.h
pcan_api/pcanbasic_java/: changelog.md
pcan_api/pcanbasic_java/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-list
pcan_api/pcanbasic_java/javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
pcan_api/pcanbasic_java/libpcanbasic_jni/: Makefile  changelog.md
pcan_api/pcanbasic_java/libpcanbasic_jni/src/: VersionNo.h  pcanbasic_jni.c  pcanbasic_jni.h
pcan_basic/: PCANBasic.py  README.md
tests/: create_CAN_msg.py  robin.py  tMotorKeyboardPos.py  tMotorTrajectorySin.py  tMotorTrajectoryTrap.py  tMotorTrajectoryTrap2.py  tMotorTrajectoryTwoPos.py  test_plot.py
tmotor software/: AK10-9.hex
(+79 files in other folders)
